--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="t"><b><p style="color:whitesmoke">Absolute and relative paths</p></b></div>
     <div class="container">
-        <div class="a"><img src="../images/img1.jpg" height="100px"width="100px"></div>
-        <div class="b"><img src="../images/img2.jpg" height="100px"width="100px"></div>
-        <div class="c"><img src="../images/img3.jpg" height="100px"width="100px"></div>
-        <div class="d"><img src="../images/img4.jpg" height="100px"width="100px"></div>
-        <div class="e"><img src="../images/img5.jpg" height="100px"width="100px"></div>
-        <div class="aa"><img src="../images/img6.jpg" height="100px"width="100px"></div>
-        <div class="ab"><img src="../images/img7.jpg" height="100px"width="100px"></div>
-        <div class="ac"><img src="../images/img8.jpg" height="100px"width="100px"></div>
-        <div class="ad"><img src="../images/img9.jpg" height="100px"width="100px"></div>
+        <div class="a"><img src="img1.jpg" height="100px"width="100px"></div>
+        <div class="b"><img src="img2.jpg" height="100px"width="100px"></div>
+        <div class="c"><img src="img3.jpg" height="100px"width="100px"></div>
+        <div class="d"><img src="img4.jpg" height="100px"width="100px"></div>
+        <div class="e"><img src="img5.jpg" height="100px"width="100px"></div>
+        <div class="aa"><img src="img6.jpg" height="100px"width="100px"></div>
+        <div class="ab"><img src="img7.jpg" height="100px"width="100px"></div>
+        <div class="ac"><img src="img8.jpg" height="100px"width="100px"></div>
+        <div class="ad"><img src="img9.jpg" height="100px"width="100px"></div>
         
 
         
